--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pagelet": "git://github.com/bigpipe/pagelet",
     "bigpipe": "git://github.com/bigpipe/bigpipe",
     "renderme": "0.0.11",
-    "marked": "^0.3.2"
+    "marked": "^0.3.2",
+    "ejs": "^1.0.0"
   }
 }
