--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "bigpipe.io",
-  "version": "0.0.0-2",
+  "version": "0.0.0-4",
   "description": "The documentation site on http://bigpipe.io",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "jitsu deploy -c && jitsu restart"
   },
   "repository": {
     "type": "git",
