--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigpipe.io",
-  "version": "0.0.0-7",
+  "version": "0.0.0-8",
   "description": "The documentation site on http://bigpipe.io",
   "main": "index.js",
   "scripts": {
@@ -32,8 +32,8 @@
   },
   "subdomain": "bigpipe",
   "domains": [
-    "bigpipe.io"
-    "www.bigpipe.io",
+    "bigpipe.io",
+    "www.bigpipe.io"
   ],
   "engines": {
     "node": "0.10.x"
