--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bigpipe.io",
-  "version": "0.0.0-8",
+  "version": "0.0.0-10",
   "description": "The documentation site on http://bigpipe.io",
   "main": "index.js",
   "scripts": {
@@ -33,7 +33,8 @@
   "subdomain": "bigpipe",
   "domains": [
     "bigpipe.io",
-    "www.bigpipe.io"
+    "www.bigpipe.io",
+    "getbigpipe.com"
   ],
   "engines": {
     "node": "0.10.x"
